Modified branding and adjusted mobile styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>JMNofziger Portfolio</title>
+  <title>Jacob M. Nofziger - WebDev</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <span class="icon-bar"></span>
       </button>
         <!-- Brand -->
-        <a class="navbar-brand" href="#">Jacob M. Nofziger</a>
+        <a class="navbar-brand" href="#">Web Development and More</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,7 +52,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-12 text-left">
-        <h2 class="text-center">A brief look at my work...</h2>
+        <h2 class="text-center">Jacob Maldonado Nofziger</h2>
       </div>
     </div>
   </div>
@@ -61,6 +61,7 @@
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2">
         <div class="col-sm-8">
+
           <!-- Head -->
           <div class="col-xs-12 text-center">
             <img class="my-head" src="images/picture-68321.jpg" />
@@ -70,6 +71,7 @@
           <div id="blurb" class="col-xs-12 text-center">
             <h4 class="text-center">Web development, system administration, and the odyssey of continuing studies.</h4>
           </div>
+          
         </div>
 
         <!-- Three Link Modules -->
