adjusted section headers height and vertical alignment

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
           <div id="blurb" class="col-xs-12 text-center">
             <h4 class="text-center">Web development, system administration, and the odyssey of continuing studies.</h4>
           </div>
-          
+
         </div>
 
-        <!-- Three Link Modules -->
+        <!-- Three Social Media Link Modules -->
         <div class="col-sm-4 three-link-mod">
           <!-- CodePen Module -->
           <div class="col-xs-4 col-sm-12 text-center">
@@ -92,16 +92,14 @@
             <h6>GitHub</h6>
           </div>
         </div>
+
       </div>
     </div>
   </div>
 
-  <div class="container-fluid">
-    <h2 class="text-center" id="projects">Projects</h2>
-  </div>
-
-
-  <div class="container-fluid">
+  <!-- About me Sections -->
+  <div class="container-fluid outer">
+    <h2 class="text-center" id="about">About</h2>
     <!--<hr/> -->
     <!-- <h2 class="text-center">Curiosity killed the cat, and satisfaction brought it back...</h2> -->
 
@@ -110,8 +108,16 @@
     <!-- <h6 class="text-center">Take a look at me meow.</h6> -->
 
   </div>
+
+  <!-- Projects Section -->
+  <div class="container-fluid outer">
+    <h2 class="text-center" id="projects">Projects</h2>
+  </div>
+
+
   <!-- Single Item Display - Slider - Gotta thank Dudley Storey https://codepen.io/dudleystorey/ for the tutorial on making html/css only sliders -->
   <div class="container-fluid" id="slider">
+    <h2>What used to be the slider</h2>
     <div class="row">
       <figure class="slide-baby">
         <div class="col-md-3 slide-baby" id="slide1"></div>
